# default-settings

./: LICENSE  config.vala.in  meson.build
accountsservice/: meson.build
data/: default-settings.gschema.override.in  meson.build  plank-initial-setup.desktop.in
launchers/: com.github.cassidyjames.ephemeral.dockitem.in  gala-multitaskingview.dockitem.in  io.elementary.calendar.dockitem.in  io.elementary.music.dockitem.in  io.elementary.photos.dockitem.in  io.elementary.switchboard.dockitem.in  io.elementary.terminal.dockitem.in  io.elementary.videos.dockitem.in  meson.build
meson/: post_install.py
overrides/: default-settings.gschema.override
src/: meson.build  plank-initial-setup.vala
